--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,20 @@
 {
     "python.autoComplete.extraPaths": [
-
+    "C:\\Users\\foadn\\AppData\\Roaming\\Python\\Python39\\site-packages",  
+    "C:\\Users\\foadn\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python310\\site-packages",
+    ],
+    "python.testing.unittestArgs": [
+        "-v",
+        "-s",
+        ".",
+        "-p",
+        "*test.py"
+    ],
+    "python.testing.pytestEnabled": false,
+    "python.testing.unittestEnabled": true,
+    "python.analysis.extraPaths": [
+        "C:\\Users\\foadn\\AppData\\Roaming\\Python\\Python39\\site-packages",
+        "C:\\Users\\foadn\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python310\\site-packages",
+        "./methods"
     ]
 }
