make the graph work (plotting); it runs multiple EWH code. i.e., MILP, Du, Apt, Fixed, Solar

--- a/config.yaml
+++ b/config.yaml
@@ -1,11 +1,11 @@
-methods: ["MILP"] #methods=["MILP", "Du","Apt","Pyomo","Fixed","Average","Solar","Negotiator","Negotiator_Linear","EA_GA"]
+methods: ["MILP", "Du", "Apt","Fixed", "Solar"] #methods=["MILP", "Du","Apt","Pyomo","Fixed","Average","Solar","Negotiator","Negotiator_Linear","EA_GA"]
 
  # methods can be ["MILP", "Du","Apt","Pyomo","Fixed","Average","Solar","Negotiator","Negotiator_Linear","EA_GA"]
 
 # defines the length of tomorrow days. e.g., if 'loop' is '4' and 'tomorrow' is 300, it runs the code for days 300, 301, 302 and 303
 # then the average of these 4 days is reported as the expected cost. this value is different from 'lookback_length' which loops through
 # past days for each tomorrow day.
-tomorrow: 176
+tomorrow: 163
 
 # if true, it won't log anything. used for when not wanting anything to be saved. since it won't run again and the log file must
 # be delected eveytime
