--- a/.gitignore
+++ b/.gitignore
@@ -118,7 +118,11 @@ celerybeat.pid
 
 # SageMath parsed files
 *.sage.py
+# VS code file
+.vscode
 
+# Python Cach files
+__pycache__/
 # Environments
 .env
 .venv
