Updating gitignore to ignore the SVG files

--- a/.gitignore
+++ b/.gitignore
@@ -121,6 +121,10 @@ celerybeat.pid
 # VS code file
 .vscode/
 
+# ignoring the SVG files
+
+*.svg
+
 # Python Cach files
 __pycache__/
 # Environments
