Big Update: now, the first version of the web application is added to the code. in first page, it asks for the user input, then based on this inputs, the python optimization code runs, the result which is an svg graph is shown on the second page.
also, some legacy files are removed as well.

--- a/config.yaml
+++ b/config.yaml
@@ -5,7 +5,7 @@ methods: ["MILP", "Du", "Apt","Fixed", "Solar"] #methods=["MILP", "Du","Apt","Py
 # defines the length of tomorrow days. e.g., if 'loop' is '4' and 'tomorrow' is 300, it runs the code for days 300, 301, 302 and 303
 # then the average of these 4 days is reported as the expected cost. this value is different from 'lookback_length' which loops through
 # past days for each tomorrow day.
-tomorrow: 163
+#tomorrow: 163
 
 # if true, it won't log anything. used for when not wanting anything to be saved. since it won't run again and the log file must
 # be delected eveytime
